# wechat-mp-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  setup-hooks.sh
examples/: analytics_security_usage.rs  basic_usage.rs  facade_category_methods.rs  login_flow.rs  message_send.rs  operations_openapi_usage.rs
hooks/: pre-commit
src/: client.rs  error.rs  lib.rs  token.rs  utils.rs
src/api/: advertising.rs  analytics.rs  auth.rs  cloud.rs  common.rs  customer_service.rs  delivery.rs  endpoint_inventory.rs  face.rs  hardware.rs  live.rs  logistics.rs  media.rs  message.rs  mod.rs  nearby.rs  ocr.rs  openapi.rs  operations.rs  plugin.rs  qrcode.rs  security.rs  service_market.rs  soter.rs  subscribe.rs  template.rs  trait.rs  user.rs  wechat_kf.rs  wxsearch.rs
src/client/: builder.rs  mod.rs  wechat_client.rs  wechat_mp.rs
src/crypto/: aes.rs  mod.rs
src/middleware/: auth.rs  logging.rs  mod.rs  retry.rs
src/types/: ids.rs  mod.rs  request.rs  response.rs  watermark.rs
tests/: api_tests.rs  crypto_tests.rs  endpoint_contract_tests.rs  http_contract_tests.rs  mock_tests.rs  parity_baseline_tests.rs  qrcode_tests.rs  reliability_tests.rs  token_tests.rs
