[package]
name = "wechat-mp-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"

description = "WeChat Mini Program SDK for Rust"
readme = "README.md"
keywords = ["wechat", "miniprogram", "sdk", "api"]
categories = ["api-bindings", "web-programming"]
repository = "https://github.com/your-org/wechat-mp-sdk"
documentation = "https://docs.rs/wechat-mp-sdk"
homepage = "https://github.com/your-org/wechat-mp-sdk"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
cbc = "0.1"
aes = "0.8"
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
